lab17,18/deployment.yml
# -----------------------------
# MySQL Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: ivolve   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          resources:
            requests:
             cpu: "250m"
             memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
    
---
# -----------------------------
# MySQL Service
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306

---
# -----------------------------
# Node.js Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: ivolve   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: mohamedabdelsattar12/java
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /usr/src/app/data
              name: nodejs-storage
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "800m"
              memory: "800Mi"
  
                
      volumes:
        - name: nodejs-storage
          persistentVolumeClaim:
            claimName: nodejs-pvc
   
---
# -----------------------------
# Node.js Service
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 80
      targetPort: 3000
